--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
- 
+  <header>
+   <title>Amanda Daly Portfolio</title>
+ </header>
 <body>
   <h1>Amanda Daly</h1>
   <p>Welcome to my website!</p>
