--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-  <header>
+  <head>
    <title>Amanda Daly Portfolio</title>
- </header>
+ </head>
 <body>
   <h1>Amanda Daly</h1>
   <p>Welcome to my website!</p>
